# Gauss_Yakobi

./: CMakeLists.txt  README.md
cmake/: Configure.cmake
src/: CMakeLists.txt  Gauss_Yakobi.cpp  Gauss_Yakobi.h
test/: CMakeLists.txt  test.cpp
